--- a/package.json
+++ b/package.json
@@ -45,10 +45,16 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "firebase": "^10.13.0",
+    "google-generative-ai": "^0.21.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.8.0",
+    "mongodb": "^6.10.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "puppeteer": "^23.6.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
@@ -63,6 +69,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
+    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
