--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "firebase": "^10.13.0",
-    "google-generative-ai": "^0.21.0",
+    "@google/generative-ai": "^0.21.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "mammoth": "^1.8.0",
