--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "pdf-parse": "^1.1.1",
-    "puppeteer": "^23.6.0",
+    "puppeteer-core": "^23.6.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
