--- a/package.json
+++ b/package.json
@@ -38,38 +38,34 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
-    "@vercel/speed-insights": "latest",
     "autoprefixer": "^10.4.20",
+    "bufferutil": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "firebase": "^10.13.0",
-    "@google/generative-ai": "^0.21.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "mammoth": "^1.8.0",
-    "mongodb": "^6.10.0",
-    "next": "15.2.4",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "pdf-parse": "^1.1.1",
-    "puppeteer-core": "^23.6.0",
-    "react": "^19",
+    "react": "19.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "utf-8-validate": "latest",
+    "vaul": "^0.9.9",
+    "ws": "latest",
     "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
-    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
