--- a/package.json
+++ b/package.json
@@ -61,13 +61,19 @@
     "utf-8-validate": "latest",
     "vaul": "^0.9.9",
     "ws": "latest",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.6.0",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/fs-extra": "^11.0.4",
+    "@types/pdf-parse": "^1.1.4",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
