--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,146 @@
+# KairosCV - .gitignore
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# ============================================================================
+# Dependencies
+# ============================================================================
 /node_modules
+/.pnp
+.pnp.js
+.yarn/cache
+.yarn/install-state.gz
 
-# next.js
+# ============================================================================
+# Testing
+# ============================================================================
+/coverage
+/coverage.*
+*.lcov
+.nyc_output
+
+# ============================================================================
+# Next.js
+# ============================================================================
 /.next/
 /out/
-
-# production
-/build
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
-.env*
-
-# vercel
+.next
 .vercel
 
-# typescript
+# ============================================================================
+# Production Builds
+# ============================================================================
+/build
+/dist
 *.tsbuildinfo
 next-env.d.ts
 
-# uploads
-/uploads
-/uploads/*
+# ============================================================================
+# Environment Variables
+# ============================================================================
+.env
+.env.local
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Keep example files
+!.env.example
+
+# ============================================================================
+# File Uploads & Generated Files
+# ============================================================================
+/uploads/**
 !/uploads/.gitkeep
+/temp
+/tmp
+
+# ============================================================================
+# Logs
+# ============================================================================
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+*.log
+
+# ============================================================================
+# Operating System Files
+# ============================================================================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ============================================================================
+# IDEs and Editors
+# ============================================================================
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# JetBrains IDEs
+.idea/
+*.iml
+*.iws
+*.ipr
+.idea_modules/
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# ============================================================================
+# Package Manager Locks (keep only pnpm)
+# ============================================================================
+package-lock.json
+yarn.lock
+
+# ============================================================================
+# TypeScript
+# ============================================================================
+*.tsbuildinfo
+tsconfig.tsbuildinfo
+
+# ============================================================================
+# Certificates & Keys
+# ============================================================================
+*.pem
+*.key
+*.cert
+*.crt
+
+# ============================================================================
+# Miscellaneous
+# ============================================================================
+.cache
+.temp
+.tmp
+*.swp
+*.swo
+*~
