--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf-to-png-converter": "^3.11.0",
+    "pdfreader": "^3.0.8",
     "puppeteer": "^24.29.1",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
@@ -72,6 +74,8 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
+    "unpdf": "^1.4.0",
     "utf-8-validate": "latest",
     "vaul": "^0.9.9",
     "ws": "latest",
