--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
     "@vitest/ui": "^4.0.8",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
